--- a/force-app/main/default/classes/ProjectWrapper.cls
+++ b/force-app/main/default/classes/ProjectWrapper.cls
@@ -1,5 +1,6 @@
 public with sharing class ProjectWrapper {
   public String title { get; set; }
+  public String description { get; set; }
   public String startDate { get; set; }
   public String endDate { get; set; }
   public List<MilestoneWrapper> milestones { get; set; }
@@ -9,7 +10,7 @@ public with sharing class ProjectWrapper {
     project.ProjectTitle__c = this.title;
     project.StartDate__c = Date.valueOf(this.startDate);
     project.EndDate__c = Date.valueOf(this.endDate);
-
+    project.Description__c = this.description;
     return project;
   }
 
