--- a/force-app/main/default/classes/ProjectMilestoneTaskProcessor.cls
+++ b/force-app/main/default/classes/ProjectMilestoneTaskProcessor.cls
@@ -1,31 +1,12 @@
 public class ProjectMilestoneTaskProcessor {
-  public class ProcessResult {
-    @AuraEnabled
-    public Boolean success;
-    @AuraEnabled
-    public String message;
-    @AuraEnabled
-    public String projectTitle;
-    @AuraEnabled
-    public String errorDetails;
-    @AuraEnabled
-    public String milestones;
-    @AuraEnabled
-    public String tasks;
-
-    public ProcessResult() {
-      this.milestones = '';
-      this.tasks = '';
-    }
-  }
-
   @AuraEnabled
   public static ProcessResult processFromJSON(Map<String, Object> data) {
     String jsonString = (String) JSON.serializePretty(data);
     return processProjectData(jsonString);
   }
 
-  public static ProcessResult processProjectData(String jsonString) {
+  @TestVisible
+  private static ProcessResult processProjectData(String jsonString) {
     ProcessResult result = new ProcessResult();
     Savepoint sp = Database.setSavepoint();
 
@@ -44,7 +25,9 @@ public class ProjectMilestoneTaskProcessor {
       List<List<TaskWrapper>> taskWrapperGroups = new List<List<TaskWrapper>>();
 
       for (MilestoneWrapper mw : milestoneListWrappers) {
-        Milestones__c milestone = mw.getMilestone(projectToInsert.Id);
+        Milestones__c milestone = mw.getMilestone();
+        milestone.ProjectId__c = projectToInsert.Id;
+
         milestonesToInsert.add(milestone);
         taskWrapperGroups.add(mw.getTasks());
       }
@@ -60,8 +43,10 @@ public class ProjectMilestoneTaskProcessor {
         List<TaskWrapper> wrappers = taskWrapperGroups[i];
 
         for (TaskWrapper tw : wrappers) {
-          Task task = tw.getTask(milestone.Id);
-          allTasksToInsert.add(task);
+          Task taskObj = tw.getTask();
+          taskObj.WhatId = milestone.Id;
+
+          allTasksToInsert.add(taskObj);
         }
       }
 
@@ -87,5 +72,25 @@ public class ProjectMilestoneTaskProcessor {
     }
 
     return result;
+  }
+
+  public class ProcessResult {
+    @AuraEnabled
+    public Boolean success;
+    @AuraEnabled
+    public String message;
+    @AuraEnabled
+    public String projectTitle;
+    @AuraEnabled
+    public String errorDetails;
+    @AuraEnabled
+    public String milestones;
+    @AuraEnabled
+    public String tasks;
+
+    public ProcessResult() {
+      this.milestones = '';
+      this.tasks = '';
+    }
   }
 }
