--- a/force-app/main/default/classes/TaskWrapper.cls
+++ b/force-app/main/default/classes/TaskWrapper.cls
@@ -1,11 +1,12 @@
 public with sharing class TaskWrapper {
+  @AuraEnabled
   public String subject { get; set; }
+  @AuraEnabled
   public String dueDate { get; set; }
 
-  public Task getTask(String milestoneId) {
+  public Task getTask() {
     Task taskObj = new Task();
     taskObj.Subject = this.subject;
-    taskObj.WhatId = milestoneId;
     taskObj.ActivityDate = Date.valueOf(this.dueDate);
 
     return taskObj;
